# MotionfulAI

./: .gitignore  CLAUDE.md  README.md  app.py  index.html  out2_text.json  package-lock.json  package.json  paths.py  pyproject.toml  scratch_code_template.txt  scratch_space  tailwind.config.js  test_agent.py  tsconfig.json  vite.config.ts
agents/: agents.py  coder_general_agent.py  test_agent.py  utils.py  verify_update_agent.py
agents/prompts/: agent_general.yaml  coder_general_01.yaml  llm_prompts.yaml  verify_update_agent.yaml
ai_utils/: openai.py
frontend/: package-lock.json  tsconfig.json
frontend/snowflake/ingestion/: embedding_generator.py
frontend/src/: MotionCanvasChatUI.tsx  project.ts
frontend/src/extra_examples/: example3.tsx
frontend/src/scenes/: 04_scene.tsx  05_scene.tsx  06_scene.tsx  lyt_horizontal1.tsx
frontend/src/scenes2/: example12_snake.tsx  example9_circle_cat.tsx
motionful_ai/: package.json  requirements.txt  vite.config.ts
motionful_ai/snowflake/: README.md  run_svg_pipeline.py
motionful_ai/snowflake/config/: snowflake_config.py
motionful_ai/src/: project.ts
my-animation/: .gitignore  api_raw_output.txt  api_response.json  out2_json  out2_text.json  package-lock.json  package.json
snowflake/: run_svg_pipeline.py
snowflake/ingestion/: svg_scraper.py
snowflake/sql/: schema_setup.sql
src/: App.tsx  index.css  main.tsx  styles.css
src/pages/: Home.tsx
src/scenes/: example.tsx
src/scenes2/: example5.tsx  example9_circle_cat.tsx
src/utils/: api.tsx
tests/: test_write_code.py
(+7 files in other folders)
