[project]
name = "lablab-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "bs4>=0.0.2",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "openai>=1.93.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]
